Optix realtime denoiser progressively reduces brightness of very bright objects. #76947

Closed
opened 2020-05-21 22:22:56 +02:00 by Tober · 9 comments

System Information
Operating system: Windows 10
Render card: RTX 2080
Driver version: 445.87

Blender Version
Broken: 2.90.2 alpha

Short description of error
The realtime denoiser cumulatively reduces the brightness of pixels that are very bright before exposure calculations, causing pixels that should be white to turn grey under some exposures.

Exact steps for others to reproduce the error
Create a new "General" file
Set the Render Engine to Cycles.
Set the Viewport samples to 1000
Set the Viewport Denoising to "OptiX AI-Accelerated"
Set the Color Management Exposure value to -10
Set the default light to "Sun", keeping its strength at 1000
Set the Viewport shading mode to "Rendered"

As the number of samples rises, the cube becomes much darker in a number of discrete steps. The two lit faces of the cube, which start out as different shades, are reduced to the same shade of grey.

This does not happen when the denoiser is not applied.

The effect, on my machine, seems to first happen around 300 samples into the 1000 samples in the example file. However, if I set the sample count to ~100, let the viewport render all samples, and then increment the sample count by 1, it immediately triggers a step of the darkening.

Viewport left to render to 100 samples in one go:
optix-100.jpg

Viewport after incrementing to 101 samples immediately after:
optix-101.jpg

optix bug.blend

**System Information** Operating system: Windows 10 Render card: RTX 2080 Driver version: 445.87 **Blender Version** Broken: 2.90.2 alpha **Short description of error** The realtime denoiser cumulatively reduces the brightness of pixels that are very bright before exposure calculations, causing pixels that should be white to turn grey under some exposures. **Exact steps for others to reproduce the error** Create a new "General" file Set the Render Engine to Cycles. Set the Viewport samples to 1000 Set the Viewport Denoising to "OptiX AI-Accelerated" Set the Color Management Exposure value to -10 Set the default light to "Sun", keeping its strength at 1000 Set the Viewport shading mode to "Rendered" As the number of samples rises, the cube becomes much darker in a number of discrete steps. The two lit faces of the cube, which start out as different shades, are reduced to the same shade of grey. This does not happen when the denoiser is not applied. The effect, on my machine, seems to first happen around 300 samples into the 1000 samples in the example file. However, if I set the sample count to ~100, let the viewport render all samples, and then increment the sample count by 1, it immediately triggers a step of the darkening. Viewport left to render to 100 samples in one go: ![optix-100.jpg](https://archive.blender.org/developer/F8546816/optix-100.jpg) Viewport after incrementing to 101 samples immediately after: ![optix-101.jpg](https://archive.blender.org/developer/F8546818/optix-101.jpg) [optix bug.blend](https://archive.blender.org/developer/F8546822/optix_bug.blend)
Author

Added subscriber: @Tober-1

Added subscriber: @Tober-1
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

I am able to confirm in Blender 2.83 8a8c61190b (2020-05-21 13:03) and 2.90 8f21f867e7 (2020-05-21 21:20) on Linux with a GTX 1050Ti driver 440.82 running with the lauch command CYCLES_OPTIX_TEST=1 so I can get OptiX denoiser to run on my GPU.

I am able to confirm in Blender 2.83 `8a8c61190b` (2020-05-21 13:03) and 2.90 `8f21f867e7` (2020-05-21 21:20) on Linux with a GTX 1050Ti driver 440.82 running with the lauch command `CYCLES_OPTIX_TEST=1` so I can get OptiX denoiser to run on my GPU.

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@2163f83078

This issue was referenced by blender/cycles@2163f830780421a11358f892288f51e5592c6af0

This issue was referenced by 28d9368538

This issue was referenced by 28d9368538f93d329573910d080e2f753f91b489
Patrick Mours self-assigned this 2020-05-27 15:33:05 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Thank you @pmoursnv

Thank you @pmoursnv
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76947
No description provided.